# routes/api.php
@@ -5,8 +5,6 @@ use App\Http\Controllers\RoleController;
 use App\Http\Controllers\UserController;
 use App\Http\Controllers\CustomerController;
 use App\Http\Controllers\SupplierController;
-use App\Http\Controllers\SupplierBankAccountController;
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 Route:: as('api.')
@@ -68,15 +66,6 @@ Route:: as('api.')
                     Route::put('/', [SupplierController::class, 'updateSupplier'])->name('suppliers.update');
                     Route::delete('/', [SupplierController::class, 'deleteSupplier'])->name('suppliers.destroy');
 
-                    Route::prefix('bank-accounts')->group(function () {
-                        Route::get('/', [SupplierBankAccountController::class, 'findAll'])->name('suppliers.bank-accounts.index');
-                        Route::post('/', [SupplierBankAccountController::class, 'createBankAccount'])->name('suppliers.bank-accounts.store');
-                        Route::prefix('{bankAccount}')->group(function () {
-                            Route::put('/', [SupplierBankAccountController::class, 'updateBankAccount'])->name('suppliers.bank-accounts.update');
-                            Route::delete('/', [SupplierBankAccountController::class, 'deleteBankAccount'])->name('suppliers.bank-accounts.destroy');
-                            Route::post('/set-primary', [SupplierBankAccountController::class, 'setPrimary'])->name('suppliers.bank-accounts.set-primary');
-                        });
-                    });
                 });
             // });
         });
